--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
     <link rel="shortcut icon" href="" />
+    <meta name="viewport" content="width=device-width" />
     <!--[if gte IE 8]>
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8">
     <![endif]-->
@@ -101,27 +102,27 @@
             <div class="col-xs-12 no-padding bg-white">
                 <ul class="col-xs-12 no-padding ul-menu pull-right">
                     <a href="index.html" class="no-padding">
-                        <li class="col-xs-2  transition ff-lato">
+                        <li class="col-xs-2 transition ff-lato">
                             Home 
                         </li>
                     </a>
                     <a href="camisetas.html" class="no-padding">
-                        <li class="col-xs-2  transition ff-lato">
+                        <li class="col-xs-2 transition ff-lato">
                             Camisetas 
                         </li>
                     </a>
                     <a href="uptoyou.html" class="no-padding">
-                        <li class="col-xs-2  transition ff-lato">
+                        <li class="col-xs-2 transition ff-lato">
                             Up to You 
                         </li>
                     </a>
                     <a href="girlgang.html" class="no-padding">
-                        <li class="col-xs-2  transition ff-lato">
+                        <li class="col-xs-2 transition ff-lato">
                             Girl Gang <i class="fa fa-venus"></i>
                         </li>
                     </a>
                     <a href="sobre.html" class="no-padding">
-                        <li class="col-xs-2  transition ff-lato">
+                        <li class="col-xs-2 transition ff-lato">
                             Sobre a Canvas
                         </li>
                     </a>
@@ -137,7 +138,7 @@
                     <img src="public/img/canvaslogo2.png" class="imglogo no-padding img-responsive" title="Canvas Logo" alt="Canvas Logo">
                 </center>
             </div>
-            <div class="menu-box">
+            <div class="menu-box" onclick="toggleMenuMobile()">
                 <i class="fa fa-bars"></i>
             </div>
             <div class="features-box col-xs-12 no-padding">
@@ -153,8 +154,36 @@
                     </li>
                 </ul>
             </div>
-        </div>
-        <!-- MOBILE HEADER END -->
+            <div id="menu-mobile" class="col-xs-7 no-padding menu closed transition">
+                <ul class="col-xs-12 no-padding">
+                    <a href="index.html">
+                        <li class="col-xs-12 custom-texto">
+                            Home
+                        </li>
+                    </a>
+                    <a href="camisetas.html">
+                        <li class="col-xs-12 custom-texto">
+                            Camisetas
+                        </li>
+                    </a>
+                    <a href="uptoyou.html">
+                        <li class="col-xs-12 custom-texto">
+                            Up to You
+                        </li>
+                    </a>
+                    <a href="girlgang.html">
+                        <li class="col-xs-12 custom-texto">
+                            Girl Gang
+                        </li>
+                    </a>
+                    <a href="sobre.html">
+                        <li class="col-xs-12 custom-texto">
+                            Sobre
+                        </li>
+                    </a>
+                </ul>
+            </div>
+        </div> <!-- MOBILE HEADER END -->
     </header>
 
     <div class="col-xs-12 no-padding">
@@ -230,32 +259,32 @@
         </div>
         <ul class="col-xs-12 no-padding ul-votacao"> 
             <li class="item-prod col-xs-12">
-                <div id="foto-votacao1" class="col-xs-4 no-padding-left">
+                <div id="foto-votacao1" class="col-xs-12 col-sm-12 col-md-4 col-lg-4 no-padding-mobile no-padding-left">
                     <img src="public/img/artista1.png" class="img-responsive" alt="" title="">
                 </div>
-                <div id="info-votacao1" class="col-xs-8 no-padding">
+                <div id="info-votacao1" class="col-xs-12 col-sm-12 col-md-8 col-lg-8 no-padding">
                     <h3 class="col-xs-12 no-padding titulo-votacao ff-lato">Bruna Farias - 18 anos - Porto Alegre RS</h3>
                     <p id="texto-votacao1" class="col-xs-12 no-padding texto-votacao ff-ptsans">
                     Bruna acabou de ser aprovada na faculdade de Artes Visuais. Sempre soube que queria tornar profissão o amor que tem pela ilustração. Interessou-se há pouco tempo pela temática da coleção e isso influenciou muito seu processo de criação. Bruna se diz admiradora do Projeto Canvas e está torcendo para ser a escolhida. Suas ilustrações foram escolhida pois adotam uma estética minimalista e contemporânea. 
                     </p>
                     <span onclick="abreTexto(1, this)" class="btn-ver-mais ff-lato">Ver mais</span>
                     <div id="owl-votacao1" class="col-xs-12 no-padding">
-                        <div class="item esq">
+                        <div class="item esq no-padding-mobile">
                             <div class="imgLiquid imgLiquidFill img-votacao">
                                 <img src="public/img/1.1.png" alt="Owl Image">
                             </div>
                         </div>
-                        <div class="item dir">
+                        <div class="item dir no-padding-mobile">
                             <div class="imgLiquid imgLiquidFill img-votacao">
                                 <img src="public/img/1.2.png" alt="Owl Image">
                             </div>
                         </div>
-                        <div class="item esq">
+                        <div class="item esq no-padding-mobile">
                             <div class="imgLiquid imgLiquidFill img-votacao">
                                 <img src="public/img/1.3.png" alt="Owl Image">
                             </div>
                         </div>
-                        <div class="item dir">
+                        <div class="item dir no-padding-mobile">
                             <div class="imgLiquid imgLiquidFill img-votacao">
                                 <img src="public/img/1.4.png" alt="Owl Image">
                             </div>
@@ -264,11 +293,14 @@
                     <button type="button" class="btn btn-vote col-xs-12 ff-lato transition" data-toggle="modal" data-target=".modal-votacao">VOTE</button>
                 </div>
             </li> 
+
+            <div class="divisor-mobile col-xs-10 col-xs-offset-1 hidden-md hidden-lg"></div>
+
             <li class="item-prod col-xs-12">
-                <div id="foto-votacao2" class="col-xs-4 no-padding-left">
+                <div id="foto-votacao2" class="col-xs-12 col-sm-12 col-md-4 col-lg-4 no-padding-mobile no-padding-left">
                     <img src="public/img/artista2.png" class="img-responsive" alt="" title="">
                 </div>
-                <div id="info-votacao2" class="col-xs-8 no-padding">
+                <div id="info-votacao2" class="col-xs-12 col-sm-12 col-md-8 col-lg-8 no-padding">
                     <h3 class="col-xs-12 no-padding titulo-votacao ff-lato">Anna Machado - 25 anos - Rio de Janeiro RJ</h3>
                     <p id="texto-votacao2" class="col-xs-12 no-padding texto-votacao ff-ptsans">
                     Anna é formada em Psicologia mas sua grande paixão sempre foi a arte. Dedica seu tempo livre à ilustração e também é amante da gastronomia. Acredita que o Projeto Canvas possa desenvolver o lado criativo das mulheres e divulgar novos talentos. Suas frases curtas foram escolhidas pois causam impacto e reforçam ideais de luta e resistência.
@@ -299,11 +331,14 @@
                     <button type="button" class="btn btn-vote col-xs-12 ff-lato transition" data-toggle="modal" data-target=".modal-votacao">VOTE</button>
                 </div>
             </li> 
+
+            <div class="divisor-mobile col-xs-10 col-xs-offset-1 hidden-md hidden-lg"></div>
+
             <li class="item-prod col-xs-12">
-                <div id="foto-votacao1" class="col-xs-4 no-padding-left">
+                <div id="foto-votacao3" class="col-xs-12 col-sm-12 col-md-4 col-lg-4 no-padding-mobile no-padding-left">
                     <img src="public/img/artista3.png" class="img-responsive" alt="" title="">
                 </div>
-                <div id="info-votacao3" class="col-xs-8 no-padding">
+                <div id="info-votacao3" class="col-xs-12 col-sm-12 col-md-8 col-lg-8 no-padding">
                     <h3 class="col-xs-12 no-padding titulo-votacao ff-lato">Vitória Santos Cruz - 22 anos - Maringa PR</h3>
                     <p id="texto-votacao3" class="col-xs-12 no-padding texto-votacao ff-ptsans">
                     Vitória está cursando o último ano de Comunicação e Multimeios. Desde criança desenhava e hoje faz isso profissionalmente. Vitória diz que esse espaço ainda é dominado pelos homens, que raramente são receptivos às artistas mulheres. Acredita que o Projeto Canvas possa criar novas possibilidades de exposição e dar visibilidade às mulheres que estão nessa luta.
@@ -341,40 +376,40 @@
 <footer class="col-xs-12 no-padding">
     <div class="container">
         <div class="conteudo-footer col-xs-12 no-padding">
-            <div class="detalhe-cima col-xs-12 no-padding hidden-xs hidden-sm">
+            <div class="detalhe-cima col-xs-12 no-padding">
                 <div class="detalhe-complemento cima"></div>
             </div>
             
             <img src="public/img/canvaslogo2.png" class="logo-footer no-padding img-responsive center-block" alt="Canvas Logo Footer" title="Canvas Logo Footer">
             <ul class="col-xs-12 no-padding">
-                <a href="" class="col-xs-4 col-sm-4 col-md-2 col-lg-2 no-padding transition">
+                <a href="" class="col-xs-12 col-sm-12 col-md-2 col-lg-2 no-padding transition">
                     <li class="ff-lato col-xs-12 no-padding">
                         Segurança
                     </li>
                 </a>
-                <a href="" class="col-xs-4 col-sm-4 col-md-2 col-lg-2 no-padding transition">
+                <a href="" class="col-xs-12 col-sm-12 col-md-2 col-lg-2 no-padding transition">
                     <li class="ff-lato col-xs-12 no-padding">
                         Pagamento
                     </li>
                 </a>
-                <a href="" class="col-xs-4 col-sm-4 col-md-2 col-lg-2 no-padding transition">
+                <a href="" class="col-xs-12 col-sm-12 col-md-2 col-lg-2 no-padding transition">
                     <li class="ff-lato col-xs-12 no-padding">
                         Política de Privacidade
                     </li>
                 </a>
-                <a href="" class="col-xs-4 col-sm-4 col-md-2 col-lg-2 no-padding transition">
+                <a href="" class="col-xs-12 col-sm-12 col-md-2 col-lg-2 no-padding transition">
                     <li class="ff-lato col-xs-12 no-padding">
                         Trocas e Devoluções
                     </li>
                 </a>
-                <a href="" class="col-xs-4 col-sm-4 col-md-2 col-lg-2 no-padding transition">
+                <a href="" class="col-xs-12 col-sm-12 col-md-2 col-lg-2 no-padding transition">
                     <li class="ff-lato col-xs-12 no-padding">
                         Contato
                     </li>
                 </a>
             </ul>
 
-            <div class="detalhe-baixo col-xs-12 no-padding hidden-xs hidden-sm">
+            <div class="detalhe-baixo col-xs-12 no-padding">
                 <div class="detalhe-complemento baixo"></div>
             </div>
         </div>
