--- a/sobre.html
+++ b/sobre.html
@@ -2,6 +2,7 @@
 <html>
     <head>
     <link rel="shortcut icon" href="" />
+    <meta name="viewport" content="width=device-width" />
     <!--[if gte IE 8]>
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8">
     <![endif]-->
@@ -48,84 +49,142 @@
 <body>
 <div class="container view-sobre">
     <header class="col-xs-12 no-padding">
-        <div class="header-firstrow col-xs-5 no-padding pull-right">
-            <ul class="col-xs-12 no-padding ul-firstrow">
-                <li class="col-xs-3">
-                    <a href="" class="ff-lato">Login</a>
-                </li>
-                <li class="col-xs-3">
-                    <a href="" class="ff-lato">Sacola <i class="fa fa-shopping-bag"></i></a>
-                </li>
-                <li class="col-xs-5 no-padding-right">
-                    <input class="col-xs-12 input-busca" type="text" name="busca" placeholder="buscar no site">
-                </li>
-                <li class="col-xs-1 no-padding li-lupa">
-                    <i class="fa fa-search"></i>
-                </li>
-            </ul>
-        </div>
-        <div class="header-firstrow left col-xs-7 no-padding pull-left">
-            <ul class="col-xs-12 no-padding ul-firstrow">
-                <li class="col-xs-4 ff-lato vantagens">
-                    Frete Grátis <i class="fa fa-truck"></i>
-                </li>
-                <li class="col-xs-4 ff-lato vantagens">
-                    Troca Garantida <i class="fa fa-exchange"></i>
-                </li>
-                <li class="col-xs-4 ff-lato vantagens">
-                    Tamanhos Variados <i class="fa fa-tags"></i>
-                </li>
-            </ul>
-        </div>
-
-        <div class="col-xs-12 no-padding logo-box">
-            <div class="col-xs-6 no-padding">
-                <a href="index.html"><img src="public/img/canvaslogo2.png" class="imglogo no-padding img-responsive" title="Canvas Logo" alt="Canvas Logo"></a>
-            </div>
-            <div class="col-xs-6 no-padding redes-sociais">
-                <ul class="col-xs-12 no-padding">
-                    <li class="col-xs-12">
-                        <a href="" target="_blank"><i class="fa fa-facebook-square transition"></i></a>
+        <!-- DESKTOP HEADER -->
+        <div class="desktop-header col-xs-12 no-padding hidden-xs hidden-sm">
+            <div class="header-firstrow col-xs-5 no-padding pull-right">
+                <ul class="col-xs-12 no-padding ul-firstrow">
+                    <li class="col-xs-3">
+                        <a href="" class="ff-lato">Login</a>
                     </li>
-                    <li class="col-xs-12">
-                        <a href="" target="_blank"><i class="fa fa-instagram transition"></i></a>
+                    <li class="col-xs-3">
+                        <a href="" class="ff-lato">Sacola <i class="fa fa-shopping-bag"></i></a>
                     </li>
-                    <li class="col-xs-12">
-                        <a href="" target="_blank"><i class="fa fa-pinterest transition"></i></a>
+                    <li class="col-xs-5 no-padding-right">
+                        <input class="col-xs-12 input-busca" type="text" name="busca" placeholder="buscar no site">
+                    </li>
+                    <li class="col-xs-1 no-padding li-lupa">
+                        <i class="fa fa-search"></i>
                     </li>
                 </ul>
             </div>
-        </div>
+            <div class="header-firstrow left col-xs-7 no-padding pull-left">
+                <ul class="col-xs-12 no-padding ul-firstrow">
+                    <li class="col-xs-4 ff-lato vantagens">
+                        Frete Grátis <i class="fa fa-truck"></i>
+                    </li>
+                    <li class="col-xs-4 ff-lato vantagens">
+                        Troca Garantida <i class="fa fa-exchange"></i>
+                    </li>
+                    <li class="col-xs-4 ff-lato vantagens">
+                        Tamanhos Variados <i class="fa fa-tags"></i>
+                    </li>
+                </ul>
+            </div>
 
-        <div class="col-xs-12 no-padding bg-white">
-            <ul class="col-xs-12 no-padding ul-menu pull-right">
-                <a href="index.html" class="no-padding">
-                    <li class="col-xs-2  transition ff-lato">
-                        Home 
-                    </li>
-                </a>
-                <a href="camisetas.html" class="no-padding">
-                    <li class="col-xs-2  transition ff-lato">
-                        Camisetas 
-                    </li>
-                </a>
-                <a href="uptoyou.html" class="no-padding">
-                    <li class="col-xs-2  transition ff-lato">
-                        Up to You 
-                    </li>
-                </a>
-                <a href="girlgang.html" class="no-padding">
-                    <li class="col-xs-2  transition ff-lato">
-                        Girl Gang <i class="fa fa-venus"></i>
-                    </li>
-                </a>
-                <a href="sobre.html" class="no-padding">
-                    <li class="col-xs-2  transition ff-lato">
-                        Sobre a Canvas
-                    </li>
-                </a>
-            </ul>
+            <div class="col-xs-12 no-padding logo-box">
+                <div class="col-xs-6 no-padding">
+                    <a href="index.html"><img src="public/img/canvaslogo2.png" class="imglogo no-padding img-responsive" title="Canvas Logo" alt="Canvas Logo"></a>
+                </div>
+                <div class="col-xs-6 no-padding redes-sociais">
+                    <ul class="col-xs-12 no-padding">
+                        <li class="col-xs-12">
+                            <a href="" target="_blank"><i class="fa fa-facebook-square transition"></i></a>
+                        </li>
+                        <li class="col-xs-12">
+                            <a href="" target="_blank"><i class="fa fa-instagram transition"></i></a>
+                        </li>
+                        <li class="col-xs-12">
+                            <a href="" target="_blank"><i class="fa fa-pinterest transition"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="col-xs-12 no-padding bg-white">
+                <ul class="col-xs-12 no-padding ul-menu pull-right">
+                    <a href="index.html" class="no-padding">
+                        <li class="col-xs-2 transition ff-lato">
+                            Home 
+                        </li>
+                    </a>
+                    <a href="camisetas.html" class="no-padding">
+                        <li class="col-xs-2 transition ff-lato">
+                            Camisetas 
+                        </li>
+                    </a>
+                    <a href="uptoyou.html" class="no-padding">
+                        <li class="col-xs-2 transition ff-lato">
+                            Up to You 
+                        </li>
+                    </a>
+                    <a href="girlgang.html" class="no-padding">
+                        <li class="col-xs-2 transition ff-lato">
+                            Girl Gang <i class="fa fa-venus"></i>
+                        </li>
+                    </a>
+                    <a href="sobre.html" class="no-padding">
+                        <li class="col-xs-2 transition ff-lato">
+                            Sobre a Canvas
+                        </li>
+                    </a>
+                </ul>
+            </div>
         </div>
+        <!-- DESKTOP HEADER END -->
+
+        <!-- MOBILE HEADER -->
+        <div class="mobile-header col-xs-12 no-padding hidden-md hidden-lg">
+            <div class="col-xs-12 no-padding">
+                <center>
+                    <a href="index.html"><img src="public/img/canvaslogo2.png" class="imglogo no-padding img-responsive" title="Canvas Logo" alt="Canvas Logo"></a>
+                </center>
+            </div>
+            <div class="menu-box" onclick="toggleMenuMobile()">
+                <i class="fa fa-bars"></i>
+            </div>
+            <div class="features-box col-xs-12 no-padding">
+                <ul class="col-xs-12 no-padding ul-firstrow">
+                    <li class="col-xs-4 ff-lato vantagens">
+                        Frete Grátis <i class="fa fa-truck"></i>
+                    </li>
+                    <li class="col-xs-4 ff-lato vantagens">
+                        Troca Garantida <i class="fa fa-exchange"></i>
+                    </li>
+                    <li class="col-xs-4 ff-lato vantagens">
+                        Tamanhos Variados <i class="fa fa-tags"></i>
+                    </li>
+                </ul>
+            </div>
+            <div id="menu-mobile" class="col-xs-7 no-padding menu closed transition">
+                <ul class="col-xs-12 no-padding">
+                    <a href="index.html">
+                        <li class="col-xs-12 custom-texto">
+                            Home
+                        </li>
+                    </a>
+                    <a href="camisetas.html">
+                        <li class="col-xs-12 custom-texto">
+                            Camisetas
+                        </li>
+                    </a>
+                    <a href="uptoyou.html">
+                        <li class="col-xs-12 custom-texto">
+                            Up to You
+                        </li>
+                    </a>
+                    <a href="girlgang.html">
+                        <li class="col-xs-12 custom-texto">
+                            Girl Gang
+                        </li>
+                    </a>
+                    <a href="sobre.html">
+                        <li class="col-xs-12 custom-texto">
+                            Sobre
+                        </li>
+                    </a>
+                </ul>
+            </div>
+        </div> <!-- MOBILE HEADER END -->
     </header>
 
     <section class="content-section col-xs-12 no-padding">
@@ -133,11 +192,11 @@
         <div class="col-xs-12 no-padding titulo-section-box">
             <span class="ff-lato titulo-section">SOBRE</span>
         </div>
-        <p class="col-xs-6 ff-lato texto-principal text-justify">A Canvas é fruto da disciplina de Planejamento e Produção em Multimeios, do curso de Comunicação e Multimeios da Universidade Estadual de Maringá.
+        <p class="col-xs-12 col-sm-12 col-md-6 col-lg-6 ff-lato texto-principal text-justify">A Canvas é fruto da disciplina de Planejamento e Produção em Multimeios, do curso de Comunicação e Multimeios da Universidade Estadual de Maringá.
             <br>
             Procuramos empoderar mulheres dando visibilidade a suas criações artísticas por meio da moda. Todas as fases, desde a produção das estampas até os materiais multimidiáticos, são feitos exclusivamente por mulheres.
         </p>
-        <p class="col-xs-6 ff-lato texto-principal text-justify">A força e a luta é o que nos inspira e nos move, acreditamos que juntas podemos ser mais fortes.
+        <p class="col-xs-12 col-sm-12 col-md-6 col-lg-6  ff-lato texto-principal text-justify">A força e a luta é o que nos inspira e nos move, acreditamos que juntas podemos ser mais fortes.
             <br>
             Transmitimos nossa paixão pela moda e pela arte em camisetas que tem muito a dizer!
             <br>
@@ -182,27 +241,27 @@
             
             <img src="public/img/canvaslogo2.png" class="logo-footer no-padding img-responsive center-block" alt="Canvas Logo Footer" title="Canvas Logo Footer">
             <ul class="col-xs-12 no-padding">
-                <a href="" class="col-xs-2 no-padding transition">
+                <a href="" class="col-xs-12 col-sm-12 col-md-2 col-lg-2 no-padding transition">
                     <li class="ff-lato col-xs-12 no-padding">
                         Segurança
                     </li>
                 </a>
-                <a href="" class="col-xs-2 no-padding transition">
+                <a href="" class="col-xs-12 col-sm-12 col-md-2 col-lg-2 no-padding transition">
                     <li class="ff-lato col-xs-12 no-padding">
                         Pagamento
                     </li>
                 </a>
-                <a href="" class="col-xs-3 no-padding transition">
+                <a href="" class="col-xs-12 col-sm-12 col-md-2 col-lg-2 no-padding transition">
                     <li class="ff-lato col-xs-12 no-padding">
                         Política de Privacidade
                     </li>
                 </a>
-                <a href="" class="col-xs-3 no-padding transition">
+                <a href="" class="col-xs-12 col-sm-12 col-md-2 col-lg-2 no-padding transition">
                     <li class="ff-lato col-xs-12 no-padding">
                         Trocas e Devoluções
                     </li>
                 </a>
-                <a href="" class="col-xs-2 no-padding transition">
+                <a href="" class="col-xs-12 col-sm-12 col-md-2 col-lg-2 no-padding transition">
                     <li class="ff-lato col-xs-12 no-padding">
                         Contato
                     </li>
