Changing responsive layout

--- a/camisetas.html
+++ b/camisetas.html
@@ -188,7 +188,7 @@
 
     <section class="listagem-camisetas content-section col-xs-12 no-padding">
         <ul class="col-xs-12 no-padding">
-            <li class="item-prod col-xs-12 col-sm-12 col-md-3 transition">
+            <li class="item-prod no-hoverxs col-xs-6 col-sm-6 col-md-3 transition">
                 <div class="imgLiquid imgLiquidFill img-estampas transition">
                     <a href="internas/camisetas_interno.html">
                         <img src="public/img/camisetas/c_faca_principal.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
@@ -201,7 +201,7 @@
                     </div>
                 </a>
             </li>
-            <li class="item-prod col-xs-6 col-sm-6 col-md-3 transition">
+            <li class="item-prod no-hoverxs col-xs-6 col-sm-6 col-md-3 transition">
                 <div class="imgLiquid imgLiquidFill img-estampas transition">
                     <a href="internas/camisetas_interno2.html">
                         <img src="public/img/camisetas/c_gasolina_principal.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
@@ -214,7 +214,7 @@
                     </div>
                 </a>
             </li>
-            <li class="item-prod col-xs-6 col-sm-6 col-md-3 transition">
+            <li class="item-prod no-hoverxs col-xs-6 col-sm-6 col-md-3 transition">
                 <div class="imgLiquid imgLiquidFill img-estampas transition">
                     <a href="internas/camisetas_interno3.html">
                         <img src="public/img/camisetas/c_lenco_principal.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
@@ -227,7 +227,7 @@
                     </div>
                 </a>
             </li>
-            <li class="item-prod col-xs-12 col-sm-12 col-md-3 transition">
+            <li class="item-prod no-hoverxs col-xs-6 col-sm-6 col-md-3 transition">
                 <div class="imgLiquid imgLiquidFill img-estampas transition">
                     <a href="internas/camisetas_interno4.html">
                         <img src="public/img/camisetas/c_martelo_principal.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
