--- a/girlgang.html
+++ b/girlgang.html
@@ -425,7 +425,7 @@
         <br>
         <strong>Beleza:</strong> Ana Paula Brandão
         <br>
-        <strong>Fotografia:</strong> Lais Alves
+        <strong>Fotografia:</strong> Lais Penteado
         <br>
         <strong>Vídeo:</strong> Amanda Podanoscki 
         <br>
