--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="mobile-header col-xs-12 no-padding hidden-md hidden-lg">
             <div class="col-xs-12 no-padding">
                 <center>
-                    <img src="public/img/canvaslogo2.png" class="imglogo no-padding img-responsive" title="Canvas Logo" alt="Canvas Logo">
+                    <a href="index.html"><img src="public/img/canvaslogo2.png" class="imglogo no-padding img-responsive" title="Canvas Logo" alt="Canvas Logo"></a>
                 </center>
             </div>
             <div class="menu-box" onclick="toggleMenuMobile()">
